<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PopConn</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">We love PopConn!</string>
    
    <!-- activity_welcome.xml -->
    <string name="str_activity_welcome_facebook_login">Login to Facebook</string>
    <string name="str_activity_welcome_instagram_login">Login to Instagram</string>
    <string name="str_activity_welcome_description">Please make sure you login to one of these first, if you dont, you cannot press Go to feed button. Fuck you!</string>
    <string name="str_activity_welcome_feed">Go to feed</string>
    
    <!-- activity_feed.xml -->

</resources>